SERVER-26943 make OpObservers for config.shards handle for writes while non-primary correctly